add active navelink and created dashboard and marathons pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-/* .active{
+.active{
     color: red;
     text-decoration: underline;
     font-weight: bold;
-} */
+}
